// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddToCartBar> Simple Products should render car when data is available 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(AddToCartBar)>
    <AddToCartBar
      cartProductCount={0}
      handleAddToCart={[Function]}
      isDisabled={false}
      isLoading={false}
      isOrderable={true}
      isVisible={true}
    >
      <div
        className={
          Object {
            "data-css-l2lbdx": "",
          }
        }
        key="bar"
      >
        <div
          className={
            Object {
              "data-css-a151wn": "",
            }
          }
        >
          <div
            className={
              Object {
                "data-css-obw2qb": "",
              }
            }
          >
            <CartItemsCount
              itemCount={0}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={
                  Object {
                    "enter": 200,
                    "exit": undefined,
                  }
                }
                unmountOnExit={false}
              >
                <div
                  className={
                    Object {
                      "data-css-2wfn1n": "",
                    }
                  }
                  style={
                    Object {
                      "opacity": 0,
                      "transform": "translate3d(0, 100%, 0)",
                    }
                  }
                >
                  <div
                    className={
                      Object {
                        "data-css-1qusxtb": "",
                      }
                    }
                  >
                    <Check>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </Check>
                  </div>
                  <Count
                    count={0}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={true}
                      mountOnEnter={false}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={200}
                      unmountOnExit={false}
                    >
                      <div
                        className={
                          Object {
                            "data-css-1becuut": "",
                          }
                        }
                        style={
                          Object {
                            "opacity": 1,
                            "transform": "translate3d(0, 0, 0)",
                          }
                        }
                      >
                        <Translate
                          className=""
                          params={
                            Object {
                              "count": 0,
                            }
                          }
                          string="product.item_added"
                        >
                          <span
                            className=""
                          >
                            product.item_added
                          </span>
                        </Translate>
                      </div>
                    </Transition>
                  </Count>
                </div>
              </Transition>
            </CartItemsCount>
            <AddMoreButton
              handleAddToCart={[Function]}
              isDisabled={false}
              isLoading={false}
              isOrderable={true}
            >
              <AddToCartButton
                buttonSize={40}
                className="css-13gub1f"
                handleAddToCart={[Function]}
                hasLoading={false}
                iconSize={20}
                isDisabled={false}
                isLoading={false}
                isOrderable={true}
                noShadow={false}
              >
                <button
                  className="css-13gub1f css-68omm3 css-nil"
                  data-test-id="addToCartButton"
                  onClick={[Function]}
                >
                  <div
                    className="css-rukjns"
                    style={
                      Object {
                        "opacity": 1,
                        "transform": "translate3d(0, 300%, 0)",
                      }
                    }
                  >
                    <Tick>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </Tick>
                  </div>
                  <div
                    className="css-rukjns"
                    onAnimationEnd={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                        "transform": "translate3d(0, -50%, 0)",
                      }
                    }
                  >
                    <CartPlus>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M0 0h24v24H0zm18.31 6l-2.76 5z\\" fill=\\"none\\"/><path d=\\"M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-9.83-3.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25z\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M0 0h24v24H0zm18.31 6l-2.76 5z\\" fill=\\"none\\"/><path d=\\"M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-9.83-3.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </CartPlus>
                  </div>
                </button>
              </AddToCartButton>
            </AddMoreButton>
          </div>
          <Connect(AddToCartButton)
            handleAddToCart={[Function]}
            isDisabled={false}
            itemCount={0}
          >
            <AddToCartButton
              handleAddToCart={[Function]}
              isDisabled={false}
              itemCount={0}
              openCart={[Function]}
            >
              <button
                className={
                  Object {
                    "data-css-hx903l": "",
                  }
                }
                data-test-id="addToCartBarButton"
                onClick={[Function]}
                style={null}
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="product.add_to_cart"
                >
                  <span
                    className=""
                  >
                    product.add_to_cart
                  </span>
                </Translate>
              </button>
            </AddToCartButton>
          </Connect(AddToCartButton)>
        </div>
      </div>
      <div
        className={
          Object {
            "data-css-1kayqc3": "",
          }
        }
        key="dummy"
      />
    </AddToCartBar>
  </Connect(AddToCartBar)>
</Provider>
`;

exports[`<AddToCartBar> Variants should render car when data is available 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(AddToCartBar)>
    <AddToCartBar
      cartProductCount={0}
      handleAddToCart={[Function]}
      isDisabled={false}
      isLoading={true}
      isOrderable={false}
      isVisible={true}
    >
      <div
        className={
          Object {
            "data-css-l2lbdx": "",
          }
        }
        key="bar"
      >
        <div
          className={
            Object {
              "data-css-a151wn": "",
            }
          }
        >
          <div
            className={
              Object {
                "data-css-obw2qb": "",
              }
            }
          >
            <CartItemsCount
              itemCount={0}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={
                  Object {
                    "enter": 200,
                    "exit": undefined,
                  }
                }
                unmountOnExit={false}
              >
                <div
                  className={
                    Object {
                      "data-css-2wfn1n": "",
                    }
                  }
                  style={
                    Object {
                      "opacity": 0,
                      "transform": "translate3d(0, 100%, 0)",
                    }
                  }
                >
                  <div
                    className={
                      Object {
                        "data-css-1qusxtb": "",
                      }
                    }
                  >
                    <Check>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </Check>
                  </div>
                  <Count
                    count={0}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={true}
                      mountOnEnter={false}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={200}
                      unmountOnExit={false}
                    >
                      <div
                        className={
                          Object {
                            "data-css-1becuut": "",
                          }
                        }
                        style={
                          Object {
                            "opacity": 1,
                            "transform": "translate3d(0, 0, 0)",
                          }
                        }
                      >
                        <Translate
                          className=""
                          params={
                            Object {
                              "count": 0,
                            }
                          }
                          string="product.item_added"
                        >
                          <span
                            className=""
                          >
                            product.item_added
                          </span>
                        </Translate>
                      </div>
                    </Transition>
                  </Count>
                </div>
              </Transition>
            </CartItemsCount>
            <AddMoreButton
              handleAddToCart={[Function]}
              isDisabled={false}
              isLoading={true}
              isOrderable={false}
            >
              <AddToCartButton
                buttonSize={40}
                className="css-13gub1f"
                handleAddToCart={[Function]}
                hasLoading={false}
                iconSize={20}
                isDisabled={false}
                isLoading={true}
                isOrderable={false}
                noShadow={false}
              >
                <button
                  className="css-13gub1f css-68omm3 css-nil"
                  data-test-id="addToCartButton"
                  onClick={[Function]}
                >
                  <div
                    className="css-rukjns"
                    style={
                      Object {
                        "opacity": 0,
                        "transform": "translate3d(0, 300%, 0)",
                      }
                    }
                  >
                    <Tick>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </Tick>
                  </div>
                  <div
                    className="css-rukjns"
                    onAnimationEnd={[Function]}
                    style={
                      Object {
                        "opacity": 0,
                        "transform": "translate3d(0, -50%, 0)",
                      }
                    }
                  >
                    <CartPlus>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M0 0h24v24H0zm18.31 6l-2.76 5z\\" fill=\\"none\\"/><path d=\\"M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-9.83-3.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25z\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M0 0h24v24H0zm18.31 6l-2.76 5z\\" fill=\\"none\\"/><path d=\\"M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-9.83-3.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </CartPlus>
                  </div>
                </button>
              </AddToCartButton>
            </AddMoreButton>
          </div>
          <Connect(AddToCartButton)
            handleAddToCart={[Function]}
            isDisabled={false}
            itemCount={0}
          >
            <AddToCartButton
              handleAddToCart={[Function]}
              isDisabled={false}
              itemCount={0}
              openCart={[Function]}
            >
              <button
                className={
                  Object {
                    "data-css-hx903l": "",
                  }
                }
                data-test-id="addToCartBarButton"
                onClick={[Function]}
                style={null}
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="product.add_to_cart"
                >
                  <span
                    className=""
                  >
                    product.add_to_cart
                  </span>
                </Translate>
              </button>
            </AddToCartButton>
          </Connect(AddToCartButton)>
        </div>
      </div>
      <div
        className={
          Object {
            "data-css-1kayqc3": "",
          }
        }
        key="dummy"
      />
    </AddToCartBar>
  </Connect(AddToCartBar)>
</Provider>
`;

exports[`<AddToCartBar> Visiblity should be hidden 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(AddToCartBar)>
    <AddToCartBar
      cartProductCount={0}
      handleAddToCart={[Function]}
      isDisabled={false}
      isLoading={false}
      isOrderable={true}
      isVisible={false}
    />
  </Connect(AddToCartBar)>
</Provider>
`;

exports[`<AddToCartBar> Visiblity should be visible 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(AddToCartBar)>
    <AddToCartBar
      cartProductCount={0}
      handleAddToCart={[Function]}
      isDisabled={false}
      isLoading={false}
      isOrderable={true}
      isVisible={true}
    >
      <div
        className={
          Object {
            "data-css-l2lbdx": "",
          }
        }
        key="bar"
      >
        <div
          className={
            Object {
              "data-css-a151wn": "",
            }
          }
        >
          <div
            className={
              Object {
                "data-css-obw2qb": "",
              }
            }
          >
            <CartItemsCount
              itemCount={0}
            >
              <Transition
                appear={false}
                enter={true}
                exit={true}
                in={false}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={
                  Object {
                    "enter": 200,
                    "exit": undefined,
                  }
                }
                unmountOnExit={false}
              >
                <div
                  className={
                    Object {
                      "data-css-2wfn1n": "",
                    }
                  }
                  style={
                    Object {
                      "opacity": 0,
                      "transform": "translate3d(0, 100%, 0)",
                    }
                  }
                >
                  <div
                    className={
                      Object {
                        "data-css-1qusxtb": "",
                      }
                    }
                  >
                    <Check>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M1 11.248L8.84 19 23 5\\" stroke=\\"#000\\" stroke-width=\\"2\\" fill=\\"none\\" fill-rule=\\"evenodd\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </Check>
                  </div>
                  <Count
                    count={0}
                  >
                    <Transition
                      appear={false}
                      enter={true}
                      exit={true}
                      in={true}
                      mountOnEnter={false}
                      onEnter={[Function]}
                      onEntered={[Function]}
                      onEntering={[Function]}
                      onExit={[Function]}
                      onExited={[Function]}
                      onExiting={[Function]}
                      timeout={200}
                      unmountOnExit={false}
                    >
                      <div
                        className={
                          Object {
                            "data-css-1becuut": "",
                          }
                        }
                        style={
                          Object {
                            "opacity": 1,
                            "transform": "translate3d(0, 0, 0)",
                          }
                        }
                      >
                        <Translate
                          className=""
                          params={
                            Object {
                              "count": 0,
                            }
                          }
                          string="product.item_added"
                        >
                          <span
                            className=""
                          >
                            product.item_added
                          </span>
                        </Translate>
                      </div>
                    </Transition>
                  </Count>
                </div>
              </Transition>
            </CartItemsCount>
            <AddMoreButton
              handleAddToCart={[Function]}
              isDisabled={false}
              isLoading={false}
              isOrderable={true}
            >
              <AddToCartButton
                buttonSize={40}
                className="css-13gub1f"
                handleAddToCart={[Function]}
                hasLoading={false}
                iconSize={20}
                isDisabled={false}
                isLoading={false}
                isOrderable={true}
                noShadow={false}
              >
                <button
                  className="css-13gub1f css-68omm3 css-nil"
                  data-test-id="addToCartButton"
                  onClick={[Function]}
                >
                  <div
                    className="css-rukjns"
                    style={
                      Object {
                        "opacity": 1,
                        "transform": "translate3d(0, 300%, 0)",
                      }
                    }
                  >
                    <Tick>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </Tick>
                  </div>
                  <div
                    className="css-rukjns"
                    onAnimationEnd={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                        "transform": "translate3d(0, -50%, 0)",
                      }
                    }
                  >
                    <CartPlus>
                      <Icon
                        className=""
                        color={null}
                        content="<path d=\\"M0 0h24v24H0zm18.31 6l-2.76 5z\\" fill=\\"none\\"/><path d=\\"M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-9.83-3.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25z\\"/>"
                        size="inherit"
                        viewBox="0 0 24 24"
                      >
                        <svg
                          className="css-yys9hb "
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "<path d=\\"M0 0h24v24H0zm18.31 6l-2.76 5z\\" fill=\\"none\\"/><path d=\\"M11 9h2V6h3V4h-3V1h-2v3H8v2h3v3zm-4 9c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2zm-9.83-3.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.86-7.01L19.42 4h-.01l-1.1 2-2.76 5H8.53l-.13-.27L6.16 6l-.95-2-.94-2H1v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.13 0-.25-.11-.25-.25z\\"/>",
                            }
                          }
                          style={
                            Object {
                              "fill": null,
                              "fontSize": "inherit",
                            }
                          }
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      </Icon>
                    </CartPlus>
                  </div>
                </button>
              </AddToCartButton>
            </AddMoreButton>
          </div>
          <Connect(AddToCartButton)
            handleAddToCart={[Function]}
            isDisabled={false}
            itemCount={0}
          >
            <AddToCartButton
              handleAddToCart={[Function]}
              isDisabled={false}
              itemCount={0}
              openCart={[Function]}
            >
              <button
                className={
                  Object {
                    "data-css-hx903l": "",
                  }
                }
                data-test-id="addToCartBarButton"
                onClick={[Function]}
                style={null}
              >
                <Translate
                  className=""
                  params={Object {}}
                  string="product.add_to_cart"
                >
                  <span
                    className=""
                  >
                    product.add_to_cart
                  </span>
                </Translate>
              </button>
            </AddToCartButton>
          </Connect(AddToCartButton)>
        </div>
      </div>
      <div
        className={
          Object {
            "data-css-1kayqc3": "",
          }
        }
        key="dummy"
      />
    </AddToCartBar>
  </Connect(AddToCartBar)>
</Provider>
`;
